--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
   <div class="">
       <div class="portfolio-container">
           <div class="profile-section slide-in">
-              <img src="assets/Venkat (2).jpg" alt="Profile" class="profile-pic" />
+              <img src="assets/Venkat.png" alt="Profile" class="profile-pic" />
           </div>
           <div class="intro-section">
               <!-- <h3 class="fade-in">Hi</h3> -->
@@ -111,28 +111,7 @@
   </div>
 </section>
 <section class="projects" id="projects">
-  <!-- <div class="" >
-      <h2 class="text-center mt-5 fs-1" style="color: #FD5E31; font-weight: 600;" id="projects">Current Projects</h2>
-      <div class="card current-project" style="width: 80%; max-width: 30rem; ">
-          <img src="assets/erp.jpg" width="100%" height="250vh" class="card-img-top" alt="...">
-          <div class="card-body">
-              <h5 class="card-title" style="color: #FD5E31;">ERP Application</h5>
-              <p class="card-text">
-                  A modern full-stack e-commerce application with secure authentication, responsive design, and seamless product, cart, and order management.
-              </p>
-              <div class="d-flex  flex-wrap align-items-center" style="gap: 10px;">
-                  <p>Angular</p>
-                  <p>TypeScript</p>
-                  <p>Bootstrap</p>
-                  <p>Angular Material</p>
-                  <p>SQL</p>
-                </div>
-            <a href="https://github.com/kvenkat04/" target="_blank">
-              <i class="fab fa-github"></i>
-          </a>
-          </div>
-        </div>
-  </div> -->
+
   <h2 class="text-center mt-5 fs-1" style="color: #4F4D73; font-weight: 600;">Past Projects</h2>
   <div class="row" style="margin: 4% 8%">
       <div class="col-md-6">
@@ -173,7 +152,7 @@
                       <p>Bootstrap</p>
                       <p>Angular Material</p>
                     </div>
-                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+               
                 <a href="#" target="_blank">
                   <i class="fab fa-github"></i>
               </a>
