--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -116,7 +116,7 @@
   <div class="row" style="margin: 4% 8%">
       <div class="col-md-6">
           <div class="card" style="width: 100%; max-width: 32rem;">
-              <img src="assets/car.jpg" width="100%" height="250vh" class="card-img-top" alt="Car Image">
+              <img src="assets/car.jpg" width="100%"  class="card-img-top" alt="Car Image">
               <div class="card-body">
                 <h5 class="card-title" style="color: #4F4D73;">Car Buying and Selling App</h5>
                 <p class="card-text" style="color: #605E79;">
@@ -138,7 +138,7 @@
       </div>
       <div class="col-md-6">
           <div class="card" style="width: 100%; max-width: 32rem; ">
-              <img src="assets/restaurant.jpg" width="100%" height="250vh" class="card-img-top" alt="...">
+              <img src="assets/restaurant.jpg" width="100%"  class="card-img-top" alt="...">
               <div class="card-body">
                   <h5 class="card-title" style="color: #4F4D73;">Restaurant Management App</h5>
                   <p class="card-text" style="color: #605E79;">
@@ -165,7 +165,7 @@
   </div>
 </section>
 <section class="professional-roles">
-  <h2 class="text-center mt-5 fs-1" style="color: #4F4D73; font-weight: 600;">Professional Roles</h2>
+  <h2 class="text-center pt-2 fs-1" style="color: #4F4D73; font-weight: 600;">Professional Roles</h2>
   <div class="roles slide-in" >
       <h3>Frontend Developer</h3>
       <ul>
@@ -178,9 +178,9 @@
   </div>
 </section>
 <section class="certificates-container">
-  <h2 class="text-center  fs-1" style="color: #4F4D73; font-weight: 600; padding-top: 1%;">Certifications</h2>
-  <div class="roles">
-      <h4 >Certificates</h4>
+  <h2 class="text-center pt-2 fs-1" style="color: #4F4D73; font-weight: 600; ">Certifications</h2>
+  <div class="roles1">
+      <h3>Certificates</h3>
       <ul>
           <li>HTML from Great learning</li>
           <li>CSS from Great learning</li>
@@ -191,7 +191,7 @@
 </section>
 <section>
   <div class="footer text-center" id="contact">
-      <h3>Let's Connect</h3>
+      <h2 style="color: #4F4D73;">Let's Connect</h2>
       <div class="social-links">
           <a href="https://github.com/kandipalli2002/Venkat_portfolio/" target="_blank">
               <i class="fab fa-github"></i>
@@ -203,7 +203,7 @@
               <i class="fas fa-envelope"></i>
           </a>
       </div>
-      <h5>In this world where you could be anywhere, thanks for being here.</h5>
+      <h5>"In this world where you could be anywhere, thanks for being here."</h5>
   </div>
 </section>
 
