--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -191,16 +191,29 @@
 .roles ul li b{
   color:  #605e79;
 }
+.roles1{
+  padding-left: 64px;
+}
+.roles1 ul{
+  padding-left: 3%;
+}
 .professional-roles{
   background-color:  #f9faff;
-  padding: 2%;
+  /* padding: 2%; */
 }
 .certificates-container{
   background-color:  #f9faff;
   margin: 2% 4%;
-  padding-bottom: 2%;
+  padding-bottom: 1%;
   border-radius: 1%;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+.certificates-container ul{
+  padding-left: 2.2%;
+  
+}
+.certi{
+  padding-left: 0% !important;
 }
 .card-img-top {
   transition: transform 0.3s ease-in-out; /* Add transition for smooth scaling */
@@ -318,5 +331,18 @@
   .fa1
   {
     display: none;
+  }
+  .roles h3{
+    padding-left: 5%;
+  }
+  .roles ul{
+    padding-left: 11%;
+    padding-right: 5%;
+  }
+  .roles1{
+    padding-left: 10%;
+  }
+  .certificates-container ul{
+    padding-left: 7%;
   }
 }
