--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,237 +1,307 @@
-.navbar{
-    background-color: #fff;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 1%;
-    /* padding-left: 8%; */
-    padding-right: 10%;
-    /* position: fixed; */
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+.navbar {
+  background-color: #fff;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 1%;
+  /* padding-left: 8%; */
+  padding-right: 10%;
+  /* position: fixed; */
+  position: fixed;
+  width: 100%;
 }
-.avatar{
-    width:40px;
-    height: 40px;
-    /* background-color: #ab47bc;  */
-    background-color: #318AF7;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: uppercase;
-    
+
+.avatar {
+  width: 40px;
+  height: 40px;
+  /* background-color: #ab47bc;  */
+  background-color: #318AF7;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+
 }
+
 .navbar .nav-link:hover,
 .navbar .nav-link.active {
   color: #318AF7;
   /* border-bottom: 3px solid #FD5E31; */
 }
-.portfolio-container {
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
-    height: 100vh;
-    padding: 10%;
-    padding-top: 7% !important;
-    background-color:#f9faff;
-    font-family: 'Arial', sans-serif;
-  }
-  
-  .profile-section {
-    flex: 1;
-    text-align: center;
-    padding-right: 5%;
-  }
-  
-  .profile-pic {
-    /* width: 300px; */
-    height: 300px;
-    border-radius: 2%;
-    box-shadow: 0px 8px 15px rgba(97, 133, 209, 0.507);
-    object-fit: cover;
-  }
-  
-  .intro-section {
-    flex: 2;
-    padding: 20px;
-    text-align: left;
-    margin-bottom: 5%;
-  }
-  
-  .action-buttons {
-    margin-top: 20px;
-  }
-  
-  .contact-me {
-    background: linear-gradient(45deg,#318AF7, #318AF7, #318AF7 );
-    color: #fff;
-    border: none;
-    padding: 13px 30px;
-    margin-right: 10px;
-    border-radius: 10px;
-    font-size: 15px !important;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  .view-projects{
-    background-color: transparent !important;
-    color: #318AF7;
-    border: 1px solid #318AF7;
-    padding: 13px 30px;
-    border-radius: 10px;
-    font-size: 15px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  
-  }
-    
-  .btn:hover,.col-3:hover,.card:hover,.example-card:hover{
-    /* background-color: #e91e63; */
-    transform: scale(1.02);
-    box-shadow: 0px 4px 10px rgba(97, 168, 209, 0.507);
-  }
-  .action-buttons .btn:hover i{  
-      animation: float9 1.1s ease-in-out infinite;  
-  } 
 
-  @keyframes float9 {
-    0% {
-      transform: translateY(0px); 
-    }
-    50% {
-      transform: translateY(-5px);
-    }
-    100% {
-      transform: translateY(0px); 
-    }
-  }
-  span{
-    color: #318AF7;
-  }
-  h1{
-    font-size: 3rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-  
-  }
-  h5{
-    font-size: 22px;
-    /* font-weight: bold; */
-    color: #868686;
-  }
-  .mat-icon {
-    vertical-align: middle;
-    margin-right: 5px;
-}
-.btn{
-    gap: 10px;
-}
-.fas,.fa-regular{
-    font-size: 1.2em;
-    margin-right: 10px;
-}
-.footer{
+.portfolio-container {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  height: 100vh;
   padding: 3%;
-  background-color:  #f9faff;
+  padding-top: 12% !important;
+  background-color: #f9faff;
+
+  background: linear-gradient(to right, #f8f8ff, #ffffff);
+
 }
-.social-links{
-  margin: 2%;
+
+.profile-section {
+  flex: 1;
+  text-align: center;
+  padding-right: 4%;
 }
-.social-links a{
-  margin: 30px;
+
+.profile-pic {
+  /* width: 300px; */
+  height: 300px;
+  border-radius: 2%;
+  box-shadow: 0px 8px 15px rgba(97, 133, 209, 0.507);
+  object-fit: cover;
+}
+
+.intro-section {
+  flex: 2;
+  padding: 0%;
+  text-align: left;
+  margin-bottom: 5%;
+  /* font-style: italic; */
+
+}
+
+.action-buttons {
+  margin-top: 20px;
+}
+
+.contact-me {
+  background: linear-gradient(45deg, #90bef7, #68a6f1, #318AF7);
+  color: #fff;
+  border: none;
+  padding: 13px 30px;
+  margin-right: 10px;
+  border-radius: 10px;
+  font-size: 15px !important;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.view-projects {
+  background-color: transparent !important;
+  color: #318AF7;
+  border: 1px solid #318AF7;
+  padding: 13px 30px;
+  border-radius: 10px;
+  font-size: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+}
+
+.example-card:hover {
+
+  transform:translateY(-5px);
+
+}
+
+.btn:hover {
+  transform: scale(1.03);
+}
+
+@keyframes float9 {
+  0% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(-5px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.card-img-container {
+  overflow: hidden;
+}
+
+
+.project-img {
+  transition: transform 0.3s ease-in-out;
+}
+
+.card-img-container:hover .project-img {
+  transform: scale(1.01);
+}
+
+.card:hover .project-img {
+  transform: scale(1.03);
+}
+
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05)
+}
+
+span {
+  color: #318AF7;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+
+}
+
+
+.mat-icon {
+  vertical-align: middle;
+  margin-right: 5px;
+}
+
+.btn {
+  gap: 10px;
+}
+
+.fas,
+.fa-regular {
+  font-size: 1.2em;
+  margin-right: 10px;
+}
+
+.footer {
+  padding: 3%;
+  background: linear-gradient(to bottom,  #ffffff,#f8f8ff);
+}
+
+.social-links {
+  margin: 1%;
+}
+
+.social-links a {
+  margin: 20px;
   /* margin-left: 0% !important; */
   font-size: 2rem;
+  color: rgb(151, 151, 151);
+  transition: transform 0.3s ease;
+}
+
+.social-links a:hover i {
+  transform: rotate(-5deg); 
   color: #318AF7;
+  font-size: 2.5rem;
+
 }
-.social-links :hover i{
-  animation: float10 1.1s ease-in-out infinite; 
-}
-.card a{
+.card a {
   font-size: 2rem;
+}
+
+.card :hover i {
   color: #318AF7;
 }
-.card :hover i{
-  animation: float9 1.1s ease-in-out infinite;  
-}
-.card .d-flex p{
-  background-color: #f9faff;
+
+.card .d-flex p {
+  background-color: #f5f5ff;
   padding: 5px 10px;
   border-radius: 30px;
-  color:#318AF7;
+  color: #318AF7;
+  font-size: 12px;
+  font-weight: 500;
 }
-.technical-skills{
-  background-color:  #f9faff;
+
+.technical-skills {
+  background: linear-gradient(to right, #f8f8ff, #ffffff);
   padding: 3%;
 }
-.example-card{
+
+.example-card {
   background-color: #fff;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   border: none;
 }
-.fa-solid{
-  animation: float10 1.1s ease-in-out infinite;
+
+.fa-solid {
+  animation: float10 1.8s ease-in-out infinite;
   padding-bottom: 5%;
   color: #318AF7;
 }
-.fa-solid:hover{
+
+.fa-solid:hover {
   color: #4F4D73;
 }
-.current-project{
+
+.current-project {
   margin: 4% 33%;
 }
-.roles{
-  margin-left: 8%;
-}
-.roles ul li{
+
+
+.roles ul li {
   line-height: 1.5;
   font-size: 18px;
   color: #605e79;
 
 }
-.roles ul li b{
-  color:  #605e79;
-}
-.roles1{
-  padding-left: 64px;
-}
-.roles1 ul{
-  padding-left: 3%;
-}
-.professional-roles{
-  background-color:  #f9faff;
-  /* padding: 2%; */
-}
-.certificates-container{
-  background-color:  #f9faff;
-  margin: 2% 4%;
-  padding-bottom: 1%;
-  border-radius: 1%;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-}
-.certificates-container ul{
-  padding-left: 2.2%;
-  
-}
-.certi{
-  padding-left: 0% !important;
-}
-.card-img-top {
-  transition: transform 0.3s ease-in-out; /* Add transition for smooth scaling */
+
+.roles ul li b {
+  color: #605e79;
 }
 
-/* .card-img-top:hover {
-  transform: scale(1.01); 
-} */
+.roles1{
+  background-color: #f8f8ff;
+  padding: 4%;
+  border-radius: 10px;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+.roles1 h5{
+  color: #4F4D73;
+  font-weight: 700;
+}
+.roles li {
+
+  padding-bottom: 10px;
+  
+}
+
+.professional-roles {
+  background: linear-gradient(to right, #f8f8ff, #ffffff);
+  padding: 2%;
+}
+
+.certificates-container {
+  background: linear-gradient(to top, #f8f8ff, #ffffff);
+  padding: 4% 4%;
+
+}
+
+.certificates-container ul {
+  padding-left: 2.2%;
+
+}
+
+.certi {
+  padding-left: 0% !important;
+}
+
+.card-img-top {
+  transition: transform 0.3s ease-in-out;
+}
+
 
 @keyframes float10 {
   0% {
-    transform: translateY(0px); 
+    transform: translateY(0px);
   }
+
   50% {
     transform: translateY(-10px);
   }
+
   100% {
-    transform: translateY(0px); 
+    transform: translateY(0px);
   }
 }
 
@@ -240,109 +310,132 @@
     opacity: 1;
   }
 }
-
-/* Slide-in effect */
 .slide-in {
   opacity: 0;
   transform: translateX(-30px);
   animation: slideIn 1s forwards ease-out;
 }
+
 .slide-in1 {
   opacity: 0;
   transform: translateX(30px);
   animation: slideIn 1s forwards ease-out;
 }
+
 @keyframes slideIn {
   to {
     opacity: 1;
     transform: translateX(0);
   }
 }
+
 @media only screen and (max-width: 768px) {
   .portfolio-container {
-    flex-direction: column; 
+    flex-direction: column;
     gap: 10px;
     margin-top: 5%;
     height: 115vh;
   }
-  .intro-section{
+
+  .intro-section {
     text-align: center;
     gap: 20px;
-   
+
   }
-  .form-inline ul{
+
+  .form-inline ul {
     text-align: center;
     margin-left: 25%;
   }
-  .action-buttons .btn{
+
+  .action-buttons .btn {
     margin: 2%;
   }
-  .logo{
-    margin-left: 13%;
+
+  .logo {
+    margin-left: 25%;
   }
-  .technical-skills .row{
+
+  .technical-skills {
+    height: 91vh;
+  }
+
+  .tech1 {
+    padding-bottom: 2%;
+  }
+
+  .technical-skills .row {
     display: grid;
-    grid-template-columns: repeat(1,1fr);
+    grid-template-columns: repeat(1, 1fr);
     width: 100%;
+    gap: 10px;
   }
-  .projects .card{
+
+  .projects .card {
     width: 18vw;
     margin-bottom: 7%;
   }
-  .example-card{
+
+  .example-card {
     margin-bottom: 5%;
   }
-  .current-project{
+
+  .current-project {
     margin: 8%;
-   
+
   }
-  .certificates-container{
-    background-color:  #f9faff;
-    margin: 5% 4%;
-    padding-bottom: 2%;
-    border-radius: 1%;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  .profile-section img {
+    margin-top: 18%;
   }
-  .profile-section img{
-    margin-top:18%;
-  }
-  .action-buttons{
+
+  .action-buttons {
     display: flex;
     flex-direction: row;
     margin-top: 0%;
     width: 100%;
     height: 50%;
   }
-  .action-buttons button{
+
+  .action-buttons button {
     width: 100%;
     height: 25%;
     padding: 2%;
   }
-  .card img:hover{
+
+  .card img:hover {
     transform: scale(1.04);
   }
-  .form-inline{
+
+  .form-inline {
     display: flex;
 
     align-items: center;
     margin-left: 20%;
-  
+
   }
-  .fa1
-  {
+
+  .fa1 {
     display: none;
   }
-  .roles h3{
+
+  .roles h3 {
     padding-left: 5%;
   }
-  .roles ul{
+
+  .roles ul {
     padding-left: 11%;
-    
+
   }
-  .roles1{
+
+  .roles1 {
     padding-left: 10%;
   }
-  .certificates-container ul{
+
+  .certificates-container ul {
     padding-left: 7%;
+  }
+
+  .col-lg-3 {
+    gap: 10px;
   }
 }
